Added Category model to TyreBundle

--- a/Resources/config/validation/orm.yml
+++ b/Resources/config/validation/orm.yml
@@ -1,3 +1,8 @@
+MrcMorales\TyreBundle\Entity\Category:
+    properties:
+        name:
+            - NotBlank: ~
+
 MrcMorales\TyreBundle\Entity\Brand:
     properties:
         name:
