Added sapCode to Tyre Model

--- a/Resources/config/doctrine/Tyre.orm.yml
+++ b/Resources/config/doctrine/Tyre.orm.yml
@@ -27,6 +27,9 @@ MrcMorales\TyreBundle\Entity\Tyre:
             length: 255
         description:
             type: text
+        sapCode:
+            type: string
+            length: 255
         winter:
             type: boolean
         runflat:
