--- a/Resources/config/validation/orm.yml
+++ b/Resources/config/validation/orm.yml
@@ -47,6 +47,8 @@ MrcMorales\TyreBundle\Entity\Tyre:
     properties:
         name:
             - NotBlank: ~
+        sapCode:
+            - NotBlank: ~
         fuelClass:
             - NotBlank: ~
             - Regex:
