Adding validation to Brand name unique

--- a/Resources/config/validation/orm.yml
+++ b/Resources/config/validation/orm.yml
@@ -4,6 +4,8 @@ MrcMorales\TyreBundle\Entity\Category:
             - NotBlank: ~
 
 MrcMorales\TyreBundle\Entity\Brand:
+    constraints:
+        - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: name
     properties:
         name:
             - NotBlank: ~
