--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": ">=5.3.3",
     "symfony/framework-bundle":        "~2.6",
-    "symfony/finder": "~2.6",
+    "symfony/finder": "~2.6"
   },
   "target-dir": "MrcMorales/TyreBundle",
   "autoload": {
