--- a/Resources/config/doctrine/Tyre.orm.yml
+++ b/Resources/config/doctrine/Tyre.orm.yml
@@ -12,8 +12,7 @@ MrcMorales\TyreBundle\Entity\Tyre:
         sapCode:
             type: string
             length: 255
-        winter:
-            type: boolean
+            nullable: true
         runflat:
             type: boolean
         fuelClass:
