--- a/Resources/config/validation/orm.yml
+++ b/Resources/config/validation/orm.yml
@@ -63,11 +63,14 @@ MrcMorales\TyreBundle\Entity\Tyre:
             - NotBlank: ~
         noiseClass:
             - NotBlank: ~
+#            - Range:
+#                min: 1
+#                max: 3
+        season:
+            - NotBlank: ~
             - Range:
                 min: 1
                 max: 3
-        winter:
-            - NotBlank: ~
         runflat:
             - NotBlank: ~
         speedRating:
