--- a/Resources/config/validation/orm.yml
+++ b/Resources/config/validation/orm.yml
@@ -49,11 +49,11 @@ MrcMorales\TyreBundle\Entity\Tyre:
             - NotBlank: ~
         sapCode:
             - NotBlank: ~
-        rollingResistance:
-            - NotBlank: ~
-            - Regex:
-                pattern: '/^[A-G]$/'
-                message: Letter between A-G
+#        rollingResistance:
+#            - NotBlank: ~
+#            - Regex:
+#                pattern: '/^[A-G]$/'
+#                message: Letter between A-G
         wetClass:
 #            - NotBlank: ~    # I need to disable this validation to fix Pricat import command
             - Regex:
@@ -61,8 +61,8 @@ MrcMorales\TyreBundle\Entity\Tyre:
                 message: Letter between A-G
         noise:
             - NotBlank: ~
-        noiseClass:
-            - NotBlank: ~
+#        noiseClass:
+#            - NotBlank: ~
 #            - Range:
 #                min: 1
 #                max: 3
