noise class nullable

--- a/Resources/config/doctrine/Tyre.orm.yml
+++ b/Resources/config/doctrine/Tyre.orm.yml
@@ -27,6 +27,7 @@ MrcMorales\TyreBundle\Entity\Tyre:
         noiseClass:
             type: string
             length: 255
+            nullable: true
         reinforced:
             type: boolean
         season:
