--- a/Resources/config/doctrine/Tyre.orm.yml
+++ b/Resources/config/doctrine/Tyre.orm.yml
@@ -36,3 +36,4 @@ MrcMorales\TyreBundle\Entity\Tyre:
         rollingResistance:
             type: string
             length: 255
+            nullable: true
